Tests working for 1.x